# covid-geosearch

./: .env.example  .gitignore  LICENSE  README.md  covid-index-csv.py  covid-index-graphql.py  covid-index-mongodb.py  covid-index-rest.py  package.json  requirements.txt
scripts/: covid-index-csv.py  covid-index-rest.py
scripts/csv/: pyproject.toml
scripts/csv/csv/: __init__.py
scripts/graphql/: pyproject.toml
scripts/graphql/export/: export-graphql.json
scripts/graphql/graphql/: __init__.py
scripts/mongodb/: pyproject.toml
scripts/mongodb/export/: export-mongodb.json
scripts/mongodb/mongodb/: __init__.py
scripts/rest/: pyproject.toml
scripts/rest/rest/: __init__.py
src/: App.js  index.js
